syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1; // document id
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  int32 ruCharges = 2;
  int32 statusCode = 3;
  int32 lsn = 4;
}
